# docvector

./: .gitignore  IMPLEMENTATION_VERIFICATION.md  README.md  ROADMAP_OSS.md  epic.md  pyproject.toml  standalone_crawler.py  test_implementation.py  test_qa_mcp.py  verify_a2_interface.py  verify_a3_chromadb.py  verify_a5_factory.py  verify_docvector_working.py  verify_factory_e2e.py  verify_qdrant_interface.py
.claude/: settings.local.json
data/chroma/: chroma.sqlite3
docvector_data/db/: docvector.db
docvector_data/vectors/chroma/: chroma.sqlite3
examples/: README.md  claude_desktop_config.json
src/docvector/: cli.py  config.py  core.py  mcp_server.py  models.py
src/docvector/api/: dependencies.py  main.py
src/docvector/api/middleware/: __init__.py  auth.py  rate_limit.py
src/docvector/api/routes/: __init__.py  auth.py  billing.py  issues.py  libraries.py  qa.py
src/docvector/api/schemas/: __init__.py  auth.py  billing.py  issues.py  qa.py
src/docvector/db/: __init__.py
src/docvector/db/migrations/versions/: 003_qa_issue_models.py  004_qa_external_sources.py  005_enterprise_multitenancy.py  006_paddle_billing.py
src/docvector/db/repositories/: __init__.py  issue_repo.py  qa_repo.py
src/docvector/embeddings/: __init__.py  local_embedder.py  registry.py
src/docvector/indexers/: __init__.py  github_indexer.py  stackoverflow_indexer.py
src/docvector/mcp/: __init__.py  server.py
src/docvector/services/: __init__.py  auth_service.py  billing_service.py  ingestion_service.py  issue_service.py  qa_service.py  search_service.py
src/docvector/utils/: context_proof.py  proof_of_work.py
src/docvector/vectordb/: __init__.py  base.py  chroma_client.py  qdrant_client.py
test_data/chroma/: chroma.sqlite3
tests/unit/: test_auto_initialization.py  test_chroma_vectordb.py  test_cli.py  test_cli_models.py  test_core_settings.py  test_embedding_registry.py  test_embeddings_factory.py  test_issue_service.py  test_local_embedder.py  test_qa_service.py  test_qdrant_vectordb.py  test_vectordb_factory.py
web/: package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/api-keys/: page.tsx
web/src/app/dashboard/sources/: page.tsx
web/src/app/search/: page.tsx
web/src/components/layout/: navbar.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx  logo.tsx  theme-toggle.tsx
